RESOLVED FIXED286671
REGRESSION(289418@main): [Win Skia] ImageBufferSkiaAcceleratedBackend.cpp(112,10): error: use of undeclared identifier 'm_layerContentsDisplayDelegate'
https://bugs.webkit.org/show_bug.cgi?id=286671
Summary REGRESSION(289418@main): [Win Skia] ImageBufferSkiaAcceleratedBackend.cpp(112...
Fujii Hironori
Reported 2025-01-28 23:35:26 PST
After 289418@main, Windows Skia port can't compile. C:\webkit\wc\Source\WebCore\platform/graphics/skia/ImageBufferSkiaAcceleratedBackend.cpp(112,10): error: use of undeclared identifier 'm_layerContentsDisplayDelegate' 112 | if (!m_layerContentsDisplayDelegate) | ^
Attachments
Fujii Hironori
Comment 1 2025-01-28 23:39:32 PST
EWS
Comment 2 2025-01-28 23:41:49 PST
Committed 289488@main (64fed32c50cd): <https://commits.webkit.org/289488@main> Reviewed commits have been landed. Closing PR #39677 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.