REGRESSION(289418@main): [Win Skia] ImageBufferSkiaAcceleratedBackend.cpp(112,10): error: use of undeclared identifier 'm_layerContentsDisplayDelegate' https://bugs.webkit.org/show_bug.cgi?id=286671

Unreviewed build fix for Windows Skia port.

* Source/WebCore/platform/graphics/skia/ImageBufferSkiaAcceleratedBackend.cpp:
(WebCore::ImageBufferSkiaAcceleratedBackend::prepareForDisplay):
Use "#if USE(COORDINATED_GRAPHICS)" for m_layerContentsDisplayDelegate

Canonical link: https://commits.webkit.org/289488@main